feat: implement the header component

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,52 @@
+/*
+--text: #f0f4e7;
+--background: #050703;
+--primary: #91c22e;
+--secondary: #567812;
+--accent: #79af0e;
+
+:root[data-theme="light"] {
+  --text: #14180b;
+  --background: #fafcf8;
+  --primary: #a0d13d;
+  --secondary: #cbed87;
+  --accent: #bbf150;
+}
+:root[data-theme="dark"] {
+  --text: #f0f4e7;
+  --background: #050703;
+  --primary: #91c22e;
+  --secondary: #567812;
+  --accent: #79af0e;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:700|Poppins:400');
+
+body {
+  font-family: 'Poppins';
+  font-weight: 400;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Poppins';
+  font-weight: 700;
+}
+
+html {font-size: 100%;} 16px
+
+h1 {font-size: 4.210rem; 67.36px}
+
+h2 {font-size: 3.158rem; 50.56px}
+
+h3 {font-size: 2.369rem; 37.92px}
+
+h4 {font-size: 1.777rem; 28.48px}
+
+h5 {font-size: 1.333rem; 21.28px}
+
+small {font-size: 0.750rem; 12px}
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap");
 
 * {
@@ -14,19 +63,19 @@ body {
   min-height: 100vh;
 }
 
-#header {
+.header {
   text-align: center;
   margin: 3rem auto;
 }
 
-#header img {
-  width: 5rem;
-  height: 5rem;
+.header img {
+  width: 6rem;
+  height: 6rem;
   object-fit: contain;
   background-color: transparent;
 }
 
-#header h1 {
+.header h1 {
   font-size: 1.5rem;
 }
 
