feat: implement the user input component and tests

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ body {
   font-size: 1.5rem;
 }
 
-#user-input {
+.user-input {
   padding: 1rem;
   max-width: 30rem;
   margin: 2rem auto;
@@ -93,7 +93,7 @@ body {
   gap: 1.5rem;
 }
 
-#user-input label {
+.user-input label {
   display: block;
   margin-bottom: 0.25rem;
   font-family: "Roboto Condensed", sans-serif;
@@ -102,7 +102,7 @@ body {
   text-transform: uppercase;
 }
 
-#user-input input {
+.user-input input {
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #76c0ae;
